# opencv_services

./: CMakeLists.txt  README.md  package.xml
src/: opencv_extract_object_positions.cpp
srv/: box_and_target_position.srv
